# paralign

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: eval_textberg.py
docs/: algorithm-comparison.md  benchmark-textberg.md
logs/: benchmark_textberg_gpu.txt  benchmark_textberg_stderr.txt  benchmark_textberg_stdout.txt
notebooks/: alignment_demo.ipynb  alignment_demo.py  smoke_test.py
src/paralign/: __init__.py  _config.py  _dp.py  _embedding.py  _similarity.py  _types.py
tests/: conftest.py  reference_algorithms.py  test_algorithm_comparison.py  test_align.py  test_dp.py  test_edge_cases.py  test_embedding.py  test_similarity.py  test_types.py
