[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paralign"
version = "0.1.0"
description = "DP-based parallel text alignment engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
models = [
    "sentence-transformers>=2.2",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paralign"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
